# robotics-remote-driving

./: .env.example  .gitignore  README.md  pyproject.toml
car-protocol/: pyproject.toml
car-protocol/car_protocol/: __init__.py  buttons.py  commands.py  serial.py
car-protocol/car_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lerobot-training/: pyproject.toml
lerobot-training/lerobot_training/: __main__.py  convert.py  infer.py  train.py  upload.py
local-bridge/: main.py  pyproject.toml
local-bridge/local_bridge/: __main__.py  audio.py  camera.py  control.py  main.py  video.py
local-controller/: README.md  controller.py  pyproject.toml
local-controller/local_controller/: main.py  ui.py
local-controller/pico_controller/: main.py
pico-firmware/: CLAUDE.md
pico-firmware/lib/Remote/: Remote.cpp  Remote.h
pico-firmware/src/: main.cpp
remote-agent/: pyproject.toml
remote-agent/remote_agent/: __main__.py  car_agent.py  main.py
remote-controller/: main.py  pyproject.toml
remote-controller/remote_controller/: __main__.py  main.py  ui.py  video.py
remote-operator/: README.md  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
remote-operator/scripts/: mcap_to_lerobot.py
remote-operator/src/main/: index.ts  ipc-handlers.ts  mcap-reader.ts  mcap-recorder.ts  types.ts
remote-operator/src/preload/: index.ts
remote-operator/src/renderer/: index.html
remote-operator/src/renderer/src/: App.tsx  globals.css
remote-operator/src/renderer/src/components/: connect-bar.tsx  key-overlay.tsx  record-button.tsx  replay-view.tsx  status-bar.tsx  video-display.tsx
remote-operator/src/renderer/src/components/ui/: button.tsx  input.tsx  spinner.tsx
remote-operator/src/renderer/src/hooks/: use-controls.ts  use-livekit.ts  use-recorder.ts  use-replay.ts
remote-operator/src/renderer/src/lib/: constants.ts
remote-operator/src/renderer/src/types/: electron-api.d.ts
token-creator/: pyproject.toml
token-creator/token_creator/: __main__.py  main.py
token-creator/token_creator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
