[project]
name = "local-controller"
version = "0.1.0"
description = "Keyboard controller for Pico remote over USB serial"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pygame>=2.5",
    "car-protocol",
]

[tool.uv.sources]
car-protocol = { workspace = true }

[project.scripts]
local-controller = "local_controller.main:main"
